# qt

./: .gitignore  CMakeLists.txt  README.md  REVIEW.md  clickwars-territory.pro  qml.qrc
.bmad-2d-phaser-game-dev/: install-manifest.yaml
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml
clickwars-territory/: CMakeLists.txt  README.md  clickwars-territory.pro  qml.qrc
clickwars-territory/docs/: NETWORK_STATUS.md  brainstorming-session-results.md
clickwars-territory/docs/architecture/: game-architecture.md
clickwars-territory/docs/stories/: story-1.1-project-setup.md  story-1.2-main-menu.md  story-1.3-game-state.md  story-1.4-gauges-display.md  story-1.5-click-zone.md  story-1.6-bot-system.md  story-1.7-victory.md  story-2.1-network-foundation.md  story-2.2-server-discovery.md  story-2.3-lobby.md  story-2.4-synchronization.md  story-2.5-disconnection.md  story-3.1-particles.md  story-3.4-victory-effects.md  story-4.2-performance.md  story-4.3-bugfixing.md
clickwars-territory/qml/: Main.qml
clickwars-territory/qml/components/: BotController.qml  ClickZone.qml  GameStateManager.qml  NetworkManager.qml  ToastNotification.qml
clickwars-territory/qml/js/: BotManager.js  GameState.js
clickwars-territory/qml/screens/: GameScreen.qml  LobbyScreen.qml  MainMenuScreen.qml  NetworkTest.qml  qmldir
clickwars-territory/server/: GameServer.js  README.md  package-lock.json  websocket-server.js
clickwars-territory/src/: Main.cpp
clickwars-territory/src/qml/screens/: MainMenuScreen.qml
docs/: BACKLOG.md  LOBBY_STATUS.md  NETWORK_BROWSER_STATUS.md  NETWORK_STATUS.md  prd.md
docs/design/: game-brief.md
docs/stories/: story-1.2-main-menu.md  story-1.3-game-state.md  story-1.4-gauges-display.md  story-1.7-victory.md  story-2.3-lobby.md  story-2.4-synchronization.md  story-2.6-network-tests.md  story-3.1-game-sync-yohan.md  story-3.2-gauge-animations.md  story-3.2-navigation-flow-mike.md  story-3.3-click-feedback.md  story-3.3-lobby-roles-mathis.md  story-3.4-victory-sync-roulem.md  story-3.5-transitions.md  story-4.1-unit-tests.md  story-4.4-documentation.md
qml/: Main.qml
qml/components/: AnimatedButton.qml  BotController.qml  ClickZone.qml  GameStateManager.qml  GaugeBar.qml  LatencyStatsPanel.qml  NetworkManager.qml  qmldir
qml/js/: GameState.js
qml/screens/: GameScreen.qml  LobbyScreen.qml  MainMenuScreen.qml  ServerBrowserScreen.qml  qmldir
qml/styles/: Theme.qml
server/: GameServer.js  README.md  add-lobby-bots.js  dashboard.html  launch-stress-bots.js  mass-stress-test.js  package.json  simulate-clicks.js  simulate-team-clicks.js  start-server.sh  stress-bot.js  tests.js  websocket-server.js
src/: Main.cpp  main.qml  networkutils.cpp  networkutils.h  websocketserver.cpp  websocketserver.h
src/qml/components/: AnimatedButton.qml
src/qml/styles/: Theme.qml  qmldir
